# igd_sqlite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test_data.cpp  test_data.h  train.cpp  train.h
UnitTest++/: CMakeLists.txt
